[package]
name = "valorant-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
iced = { version = "0.10.0", features = ["image", "advanced"] }
regex = { version = "1.9.5" }
image = { version = "0.24.7" }