[package]
name = "valorant-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
regex = { version = "1.10.4" }
image = { version = "0.25.1", features = ["jpeg", "png"] }
serde_json = {  version = "1.0" }
turbosql = { version = "0.10.0" }
eframe = {  version = "0.27.2", features = ["default", "persistence"] }
env_logger = { version = "0.11.3", features = [
    "auto-color",
    "humantime",
]}

ehttp = "0.5.0"
egui_extras = { version = "0.27", features = ["all_loaders", "http", "image", "file", "svg"] }

poll-promise = "0.3.0"
timeago = "0.4.2"
log = "0.4.21"
directories-next = "2.0.0"